--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: mixpanelFunnels
-Title: What the Package Does (one line, title case)
+Title: Retrieves funnel data from Mixpanel.
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
+Authors@R: person("Daran", "Johnson", email = "daranjjohnson@gmail.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
 Depends: R (>= 3.6.0)
-License: What license is it under?
+License: NONE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.99.9000
